--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<ion-app>  
+  <ion-content>
+    
+    <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br /> <br />
+    <ion-button (click)="cloneElement()">Clone Button Outside of ion-app</ion-button>
+    <ion-button (click)="cloneElement(true)">Clone Button Inside of ion-app</ion-button>
+  </ion-content>
 </ion-app>
